# amsdospy

./: .gitignore  NOTAS.txt  README.md  pp.py  pyproject.toml  release.md
.github/workflows/: publish.yml  release.yaml
amsdospy/: common.py  main.py
console/: common.py  main.py
tests/prueba/cfg/: .history  CPCEmu.cfg  CPCReady.cfg
tests/prueba/src/: DISC.BAS
tests/prueba2/cfg/: .history  CPCEmu.cfg  CPCReady.cfg
